--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
             // 清除之前的部门信息
             sessionStorage.removeItem('currentDepartment');
             // 跳转到工具页面
-            window.location.href = `/views/tools.html?dept=${deptKey}`;
+            window.location.href = `./views/tools.html?dept=${deptKey}`;
         }
         
         // 页面加载完成后初始化
